[tool.poetry]
name = "cipher_wd2366"
version = "0.1.0"
description = "A function used for encryption and decryption"
authors = ["Weiwen Dai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
